# SPIMprep

./: .gitignore  404.html  CHANGELOG.md  README.md  cmd.sh  coiled.sh  index.html  mkdocs.yml  pixi.toml  pyproject.toml  run.py  run_sample.sh  spimprep_run  submit_jobs.py
.github/: snakebids_action_requirements.txt
.github/workflows/: docs.yml  main.yml  release-please.yml  test.yml
.test/dryrun/data/: README
config/: README.md  config.yml  datasets.tsv  samples.tsv
dask-stitch/: Snakefile  config.yml
dask-stitch/lib/: utils.py
dask-stitch/scripts/: assign_translation.py  compute_pairwise_correlation.py  compute_pairwise_offsets_from_truth.py  create_test_dataset.py  create_test_dataset_combined.py  create_test_dataset_singletile.py  find_overlapping_pairs.py  fuse_volume.py  fuse_volume_old.py  get_tiles_as_nifti.py  global_optimization.py
docs/: index.md  workflow.md
example_notebooks/: example_zarr_process.ipynb
plugins/: app.py  cli.py
qc/resources/: qc_report_temp.html  subject_html_temp.html  ws_html_temp.html
qc/resources/volViewer/: volRender.html  volRenderScript.js
qc_viewer/: README.md
qc_viewer/resources/sliceViewer/: ff_corr.html  image_expand.js  style.css  (+1 more)
resources/ABAv3/: labelmapper_ABAv3_to_all.json
resources/bids_template_files/: README.md  samples.json
resources/qc/: README.md  ff_html_temp.html  subject_html_temp.html
testing/: README.md  create_downsampled_dataset.py  create_test_dataset.py  generate_test.py
testing/dryrun_tests/: datasets_gcs.tsv  datasets_local.tsv  samples_gcs.tsv  samples_local.tsv
testing/testing_scripts/: common.py  test_apply_basic_flatfield_corr.py  test_bids_readme.py  test_bids_samples_json.py  test_blaze_to_metadata.py  test_create_samples_tsv.py  test_extract_dataset.py  test_fit_basic_flatfield_corr.py  test_generate_flatfield_qc.py  test_generate_subject_qc.py  test_generate_volume_qc.py  test_generate_whole_slice_qc.py  test_ome_zarr_to_nii.py  test_raw_dataset_desc.py  test_resampled_dataset_desc.py  test_tif_to_zarr.py  test_zarr_to_bdv.py
workflow/: Snakefile  index.html
workflow/envs/: basicpy.yml  global.yaml  global.yml  google_cloud.yaml  imaris.yml  multiview_stitcher.yml
workflow/lib/: cloud_io.py  dask_image.py
workflow/macros/: AutostitchMacro.ijm  FuseImageMacroZarr.ijm
workflow/notebooks/: ome-zarr-dask.ipynb
workflow/rules/: .bids.smk.swp  atlasreg.smk  bids.smk  bigstitcher.smk  common.smk  flatfield_corr.smk  imaris.smk  import.smk  multiview_stitcher.smk  ome_zarr.smk  qc.smk
workflow/scripts/: apply_basic_flatfield_corr_zarr.py  bioformats_to_zarr.py  blaze_to_metadata.py  blaze_to_metadata_gcs.py  concat_tiles.py  create_samples_tsv.py  create_viewer.py  fit_basic_flatfield_corr_zarr.py  generate_aggregate_qc.py  generate_flatfield_qc.py  generate_subject_qc.py  generate_volume_qc.py  generate_whole_slice_qc.py  imaris_channel_to_zarr.py  imaris_to_metadata.py  imaris_to_ome_zarr.py  import_labelmapper_lut.py  multiview_stitcher.py  mvstitcher_fusion.py  mvstitcher_reg_plots.py  mvstitcher_registration.py  ome_zarr_to_nii.py  prestitched_to_metadata.py  raw_to_metadata.py  resample_labels_to_zarr.py  stitched_tif_to_zarr.py  tif_stacks_to_ome_zarr.py  tif_to_zarr.py  tif_to_zarr_gcs.py  zarr_to_n5_bdv.py  zarr_to_ome_zarr.py  zarr_to_ome_zarr_labels.py
(+2 files in other folders)
