[tool.poetry]
name = "SPIMprep"
version = "0.1.0"
description = ""
authors = ["Ali Khan <alik@robarts.ca>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
snakemake = "<8.0.0"
pulp = "2.7.0"
snakebids = "0.11.0"

[tool.poetry.group.dev.dependencies]
snakefmt = "^0.10.0"
mkdocs-material = "^9.5.20"
mkdocs-include-markdown-plugin = "^6.0.6"


[tool.poetry.group.dataset_creation.dependencies]
typer = "^0.12.3"
xmltodict = "^0.13.0"
tifffile = "^2024.5.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
