[tool.poetry]
name = "SPIMprep"
version = "0.1.0"
description = ""
authors = ["Ali Khan <alik@robarts.ca>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
snakemake = "^8.0.0"
snakebids = "^0.13.0"
snakemake-storage-plugin-s3 = "^0.2.11"
snakemake-storage-plugin-gcs = "^1.0.0"
gcsfs = "^2024.3.1"
s3fs = "^2024.3.1"
universal-pathlib = "^0.2.2"

[tool.poetry.group.dev.dependencies]
snakefmt = "^0.10.0"
mkdocs-material = "^9.5.20"
mkdocs-include-markdown-plugin = "^6.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
