[tool.poetry]
name = "SPIMprep"
version = "0.1.0"
description = ""
authors = ["Ali Khan <alik@robarts.ca>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
snakemake = "^8.0.0"
snakebids = "^0.13.0"
snakemake-storage-plugin-s3 = "^0.2.11"
snakemake-storage-plugin-gcs = "^1.1.1"
gcsfs = "^2024.3.1"
s3fs = "^2024.3.1"
universal-pathlib = "^0.2.2"
dask = "^2024.2.0"
#multiview-stitcher = { git = "https://github.com/akhanf/multiview-stitcher/", branch="main" }
multiview-stitcher = { path = "./multiview-stitcher/" , develop=true}
zarrnii = { path = "./zarrnii" , develop=true}

[tool.poetry.group.dev.dependencies]
snakefmt = "^0.10.0"
mkdocs-material = "^9.5.20"
mkdocs-include-markdown-plugin = "^6.0.6"
poethepoet = "^0.29.0"


[tool.poetry.group.dataset_creation.dependencies]
typer = "^0.12.3"
xmltodict = "^0.13.0"
tifffile = "^2024.5.10"

[tool.poe.tasks]
test_localin_gcsout = "snakemake --dry-run --config samples=testing/dryrun_tests/samples_local.tsv root='gcs://khanlab-lightsheet/data/test_bids'"
test_localin_localout = "snakemake --dry-run --config samples=testing/dryrun_tests/samples_local.tsv root=bids"
test_gcsin_gcsout = "snakemake --dry-run --config samples=testing/dryrun_tests/samples_gcs.tsv root='gcs://khanlab-lightsheet/data/test_bids'"
test_gcsin_localout = "snakemake --dry-run --config samples=testing/dryrun_tests/samples_gcs.tsv root=bids"
test_localin_localout_zipstore = "snakemake --dry-run --config samples=testing/dryrun_tests/samples_local.tsv root=bids use_zipstore=True"
test_localin_gcsout_zipstore = "snakemake --dry-run --config samples=testing/dryrun_tests/samples_local.tsv root='gcs://khanlab-lightsheet/data/test_bids' use_zipstore=True"
test_gcsout=["test_localin_gcsout", "test_gcsin_gcsout", "test_localin_gcsout_zipstore"]
test_localout=["test_localin_localout", "test_gcsin_localout", "test_localin_localout_zipstore"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
